external-crates/move/crates/move-compiler-transactional-tests/tests/syntax/signed_int_syntax.snap
---
source: crates/move-transactional-test-runner/src/framework.rs
---
processed 8 tasks

task 1, lines 3-92:
//# publish
Error: error[E13003]: feature is under active development
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpoCfqaj:56:24
   │
56 │         let v = vector[1i8, -1i8, 0i8];
   │                        ^^^ signed integer types are under development

error[E13003]: feature is under active development
   ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpoCfqaj:61:37
   │
61 │         let w: vector<i32> = vector[-100i32, 0i32, 100i32];
   │                                     ^^^^^^^ signed integer types are under development



task 2, line 94:
//# run 0x42::signed_syntax::test_let_bindings
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: 0x42,
    indices: [],
    offsets: [],
    message: "Cannot find package 0000000000000000000000000000000000000000000000000000000000000042 in data cache",
}

task 3, line 96:
//# run 0x42::signed_syntax::test_struct_fields
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: 0x42,
    indices: [],
    offsets: [],
    message: "Cannot find package 0000000000000000000000000000000000000000000000000000000000000042 in data cache",
}

task 4, line 98:
//# run 0x42::signed_syntax::test_tuple_positions
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: 0x42,
    indices: [],
    offsets: [],
    message: "Cannot find package 0000000000000000000000000000000000000000000000000000000000000042 in data cache",
}

task 5, line 100:
//# run 0x42::signed_syntax::test_vector_literals
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: 0x42,
    indices: [],
    offsets: [],
    message: "Cannot find package 0000000000000000000000000000000000000000000000000000000000000042 in data cache",
}

task 6, line 102:
//# run 0x42::signed_syntax::test_type_annotations
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: 0x42,
    indices: [],
    offsets: [],
    message: "Cannot find package 0000000000000000000000000000000000000000000000000000000000000042 in data cache",
}

task 7, line 104:
//# run 0x42::signed_syntax::test_if_expressions
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: 0x42,
    indices: [],
    offsets: [],
    message: "Cannot find package 0000000000000000000000000000000000000000000000000000000000000042 in data cache",
}
